começando o service e tratando erros

--- a/venue-api/src/main/resources/application.properties
+++ b/venue-api/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=venue-api
+
+# Banco de dados
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Venue
+spring.datasource.username=sa
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# Hibernate / JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
+# Porta do servidor
+server.port=8080
+
+# Segurança (opcional)
+spring.security.user.name=admin
+spring.security.user.password=admin
